--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <title>Michael Meyers</title>
     <script src="michael.js" defer></script>
   </head>
-
   <body style="display: flex; justify-content: center; align-items: center; height: 100vh">
-    <!-- <pre>
+    <pre> 
       ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣀⣀⣀⣤⣴⣶⣶⡞⣿⣿⣿⣿⣿⢶⣦⡀⢀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⣠⣶⡟⡏⡉⣽⢋⡽⣷⡟⠉⠘⣸⢻⡟⢻⡾⡏⠂⢹⡿⡙⢷⣦⣀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣀⣶⣿⣻⣿⡇⢁⡇⣷⣼⢡⣿⠀⠞⣾⡇⡀⣿⠸⣧⢹⣼⣤⣷⠳⡄⠛⡟⣯⣶⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
@@ -49,9 +48,7 @@
 ⠈⢯⢳⡀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⠴⢯⡁⣇⠀⠀⠀⠀⠀⠀⣰⣿⣀⠤⠾⠛⠉⠁⠀⢰⡶⠛⠀⠀⠀⣼⠁⣾⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⣜⣏⣧⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⢀⡤⠞⠉⠀⠀⠙⢏⡉⠓⠶⠶⠋⠉⠉⠉⠀⠀⠀⠀⠀⢀⣴⣻⣆⠀⠀⢠⣾⠏⢀⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
 ⠀⠘⢻⣟⣆⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⣠⠴⠋⠀⠀⠀⠀⠀⠀⠀⠑⢦⡤⠤⠤⠀⠀⠀⠀⠀⠀⠀⣠⠟⢺⣿⡿⣷⠞⠉⠀⠀⢸⡇⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-⠀⠀⢨⡟⠈⠢⢀⠀⠀⢀⠄⠀⣀⡴⢎⠁⠀⠀⠀⠉⢦⡠⠀⠀⠀⠀⠀⠉⡲⣄⠀⠀⠀⠀⠀⠀⢰⡏⡀⢀⣈⡿⠋⠀⠀⠀⠀⣸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
-      
-    </pre> -->
-    <h1>Hello World</h1>
+⠀⠀⢨⡟⠈⠢⢀⠀⠀⢀⠄⠀⣀⡴⢎⠁⠀⠀⠀⠉⢦⡠⠀⠀⠀⠀⠀⠉⡲⣄⠀⠀⠀⠀⠀⠀⢰⡏⡀⢀⣈⡿⠋⠀⠀⠀⠀⣸⣿⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+    </pre>      
   </body>
 </html>
